--- a/app/src/main/res/layout/admin_order_list.xml
+++ b/app/src/main/res/layout/admin_order_list.xml
@@ -7,7 +7,6 @@
     android:background="#F8F7EE">
 
 
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -23,14 +22,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/order_product_recycler_view"
-        android:layout_width="344dp"
-        android:layout_height="531dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="390dp"
+        android:layout_height="561dp"
+        android:layout_marginTop="33dp"
         android:dividerHeight="1dp"
         app:layout_constraintBottom_toTopOf="@+id/barnavadm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/barnavadm"
