--- a/app/src/main/res/layout/client_category_list.xml
+++ b/app/src/main/res/layout/client_category_list.xml
@@ -37,11 +37,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/category_list_client"
-        android:layout_width="357dp"
-        android:layout_height="523dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="17dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/barnavcliente"
         app:layout_constraintEnd_toEndOf="parent"
