--- a/app/src/main/res/layout/client_category_list_item.xml
+++ b/app/src/main/res/layout/client_category_list_item.xml
@@ -4,11 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/category_client_card"
-    android:layout_width="325.7dp"
+    android:layout_width="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
-    android:layout_marginStart="43dp"
+    android:layout_marginTop="15dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
