--- a/app/src/main/res/layout/client_product_list.xml
+++ b/app/src/main/res/layout/client_product_list.xml
@@ -9,29 +9,30 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_client_list"
-        android:layout_width="333dp"
-        android:layout_height="491dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="2dp"
         android:background="#F8F7EE"
-        app:layout_constraintBottom_toTopOf="@+id/barnavcliente"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textTituloProductcliente" />
+        app:layout_constraintTop_toBottomOf="@+id/textTituloProductcliente"
+        app:layout_constraintVertical_bias="0.0" />
+
 
     <EditText
         android:id="@+id/search_bar"
         android:layout_width="200dp"
         android:layout_height="44dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/search_view_background"
         android:drawableEnd="@drawable/ic_search"
         android:hint="Buscar producto"
         android:padding="10dp"
         app:layout_constraintEnd_toStartOf="@+id/shopping_cart_icon"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageButton
         android:id="@+id/imageBtn_productClient"
@@ -50,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="6dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginEnd="9dp"
         android:fontFamily="@font/rtladamscriptbold"
         android:text="@string/textvpanpancat_prod"
         android:textSize="23sp"
@@ -60,7 +61,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/search_bar"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/shopping_cart_icon"
@@ -91,20 +92,6 @@
         app:layout_constraintTop_toBottomOf="@+id/search_bar"
         tools:ignore="MissingConstraints" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/barnavcliente"
-        style="@style/MyBottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:background="#90531D"
-        app:itemIconSize="@dimen/bottom_navigation_icon_size"
-        app:itemIconTint="@drawable/fientecbarra"
-        app:itemTextColor="#FFFEF5"
-        app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/barnav_menu_cliente" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
