--- a/app/src/main/res/layout/client_product_list_item.xml
+++ b/app/src/main/res/layout/client_product_list_item.xml
@@ -5,8 +5,9 @@
     android:id="@+id/cardview_product_client1"
     android:layout_width="165dp"
     android:layout_height="292dp"
-    android:layout_marginStart="32dp"
+    android:layout_marginStart="20dp"
     android:layout_marginTop="32dp"
+    android:layout_marginEnd="6dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
     app:layout_constraintEnd_toStartOf="@+id/cardview_product_client2"
